--- a/css/syntax.html
+++ b/css/syntax.html
@@ -8,11 +8,11 @@
     <style>
         li{
             color:red;
-            
+
         }
         .italic{
             font-style: italic;
-            
+            color:blue;
         }
         #target{
             font-size: 50px;
@@ -31,7 +31,7 @@
     <ul>
         <li style="text-decoration:underline;">item</li>
         <li class="italic"id="target">item</li>
-        <li >item</li>
+        <li id="target">item</li>
     </ul>
 </body>
 </html>
