--- a/Javascript/datatype.html
+++ b/Javascript/datatype.html
@@ -18,6 +18,20 @@
 
 
     </script>
+    <h1>문자열 String</h1>
+    <script>
+        document.write('Hello Wrold <br>');
+        document.write('Hello Wrold <br>');
+        document.write(`Hello Wrold <br>`);
+          console.log(`hellog\
+          world`);
+        document.write(`Hello Wrold <br>`);
+        document.write("lkjldskfjlsdjsfdlkdslfjksdlfjsdkfdsjklz".length+"<br>")
+        document.write('hell world'.replace('hell','hello'));
+        document.write(`<br>`);
+        document.write(1+1);
+        document.write('1'+'1')
+    </script>
 </body>
 
 </html>
