--- a/Javascript/flow-control.html
+++ b/Javascript/flow-control.html
@@ -13,6 +13,24 @@
             console.log(2>1);
             console.log(2<1);
         </script>
-
+        <h1>Conditional Statements</h1>
+        <script>
+            console.log(1);
+            if(false){
+                console.log(2);
+                console.log(3);
+            }
+            console.log(4);
+        </script>
+        <h1></h1>
+        <script>
+           let input_id= prompt('id?');
+           let id = 'jiho';
+           if(input_id===id){
+               alert(id+"님 어서오세요");
+           }else{
+               alert(input_id+"는 잘못된 유저입니다.")
+           }
+        </script>
     </body>
 </html>
